5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4351/executions/1734_2499.log
== TEST (2019-05-09 19:01:38) 
-- CODE:
from math import*
k=float(input("numero real k: "))
e= 1
c= 0

while (c <= k):
	e= e + (1/factorial(c))
	c= c+1
print(e)
-- OUTPUT:
3.7182539682539684
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:01:53) 
-- CODE:
from math import*
k=float(input("numero real k: "))
e= 1
c= 0

while (c <= k):
	e= e + (1/factorial(c))
	c= c+1
print(e)
-- OUTPUT:
3.7182539682539684
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:04:30) 
-- CODE:
from math import*
k=float(input("numero real k: "))
e= 1
c= 0
if (k==1):
	print(1.0)
else:
	while (c <= k):
	e= e + (1/factorial(c))
	c= c+1
print(round(e, 8))
-- ERROR:
File "XXXX", line 9
    e= e + (1/factorial(c))
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:04:37) 
-- CODE:
from math import*
k=float(input("numero real k: "))
e= 1
c= 0
if (k==1):
	print(1.0)
else:
	while (c <= k):
		e= e + (1/factorial(c))
		c= c+1
print(round(e, 8))
-- OUTPUT:
3.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:04:48) 
-- CODE:
from math import*
k=float(input("numero real k: "))
e= 1
c= 0
if (k==1):
	print(1.0)
else:
	while (c <= k):
		e= e + (1/factorial(c))
		c= c+1
print(round(e, 8))
-- OUTPUT:
3.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:05:12) 
-- CODE:
from math import*
k=float(input("numero real k: "))
e= 1
c= 0
if (k==1):
	print(1.0)
else:
	while (c <= k):
		e= e + (1/factorial(c))
		c= c+1
		print(round(e, 8))
-- OUTPUT:
2.0
3.0
3.5
3.66666667
3.70833333
3.71666667
3.71805556
3.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:05:19) 
-- CODE:
from math import*
k=float(input("numero real k: "))
e= 1
c= 0
if (k==1):
	print(1.0)
else:
	while (c <= k):
		e= e + (1/factorial(c))
		c= c+1
		print(round(e, 8))
-- OUTPUT:
2.0
3.0
3.5
3.66666667
3.70833333
3.71666667
3.71805556
3.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:06:56) 
-- CODE:
from math import*
k=float(input("numero real k: "))
e= 0
c= 0
while (c <= k):
	e= e + (1+(1/factorial(c))
	c= c+1
print(round(e, 8))
-- ERROR:
File "XXXX", line 7
    c= c+1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:07:14) 
-- CODE:
from math import*
k=float(input("numero real k: "))
e= 0
c= 0
while (c <= k):
	e= e + (1+(1/factorial(c))
	c= c+1
print(round(e, 8))
-- ERROR:
File "XXXX", line 7
    c= c+1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:07:39) 
-- CODE:
from math import*
k=float(input("numero real k: "))
e= 0
c= 0
while (c <= k):
	e= 1+(1/factorial(c))
	c= c+1
print(round(e, 8))
-- OUTPUT:
1.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:08:32) 
-- CODE:
from math import*
k=float(input("numero real k: "))
e= 1
c= 0
while (c <= k):
	e= e+ (1/factorial(c))
	c= c+1
print(round(e, 8))
-- OUTPUT:
3.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:09:05) 
-- CODE:
from math import*
k=float(input("numero real k: "))
e= 1
c= 0
while (c <= k):
	e= e+ (1/factorial(c))
	c= c+1
print(round(e, 8))
-- OUTPUT:
3.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:10:17) 
-- CODE:
from math import*
k=float(input("numero real k: "))
e= 0
c= 0
while (c <= k):
	e= e+ (1/factorial(c))
	c= c+1
print(round(e, 8))
-- OUTPUT:
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:10:58) 
-- CODE:
from math import*
k=float(input("numero real k: "))
e= 0
c= 0
while (c <= k):
	e= e+ (1/factorial(c))
	c= c+1
print(round(e, 8))
print(1/factorial(c))
-- OUTPUT:
2.71825397
2.48015873015873e-05
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:12:24) 
-- CODE:
from math import*
k=float(input("numero real k: "))
e= 0
c= 0
while (c <= k):
	e= e+ ((1)/factorial(c))
	c= c+1
print(round(e, 8))
print(factorial(1))
-- OUTPUT:
2.71825397
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:12:41) 
-- CODE:
from math import*
k=float(input("numero real k: "))
e= 0
c= 0
while (c <= k):
	e= e+ ((1)/factorial(c))
	c= c+1
print(round(e, 8))
print(factorial(1))
-- OUTPUT:
2.71825397
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:12:49) 
-- CODE:
from math import*
k=float(input("numero real k: "))
e= 0
c= 0
while (c <= k):
	e= e+ ((1)/factorial(c))
	c= c+1
print(round(e, 8))

-- OUTPUT:
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:12:54) 
-- CODE:
from math import*
k=float(input("numero real k: "))
e= 0
c= 0
while (c <= k):
	e= e+ ((1)/factorial(c))
	c= c+1
print(round(e, 8))

-- OUTPUT:
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:13:04) 
-- CODE:
from math import*
k=float(input("numero real k: "))
e= 0
c= 0
while (c <= k):
	e= e+ ((1)/factorial(c))
	c= c+1
print(round(e, 8))

-- OUTPUT:
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:13:17) 
-- CODE:
from math import*
k=float(input("numero real k: "))
e= 0
c= 0
while (c <= k):
	e= e+ ((1)/factorial(c))
	c= c+1
print(round(e, 8))

-- OUTPUT:
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:14:16) 
-- CODE:
from math import*
k=float(input("numero real k: "))
e= 0
c= 0
if (k==1):
	print(1.0)
else:	
	while (c <= k):
		e= e+ ((1)/factorial(c))
		c= c+1
		print(round(e, 8))

-- OUTPUT:
1.0
2.0
2.5
2.66666667
2.70833333
2.71666667
2.71805556
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:14:20) 
-- CODE:
from math import*
k=float(input("numero real k: "))
e= 0
c= 0
if (k==1):
	print(1.0)
else:	
	while (c <= k):
		e= e+ ((1)/factorial(c))
		c= c+1
		print(round(e, 8))

-- OUTPUT:
1.0
2.0
2.5
2.66666667
2.70833333
2.71666667
2.71805556
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:14:31) 
-- CODE:
from math import*
k=float(input("numero real k: "))
e= 0
c= 0
if (k==1):
	print(1.0)
else:	
	while (c < k):
		e= e+ ((1)/factorial(c))
		c= c+1
		print(round(e, 8))

-- OUTPUT:
1.0
2.0
2.5
2.66666667
2.70833333
2.71666667
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:15:07) 
-- CODE:
from math import*
k=float(input("numero real k: "))
e= 0
c= 0
if (k==1):
	print(1.0)
else:	
	while (c < k):
		e= e+ ((1)/factorial(c))
		c= c+1
		print(round(e, 8))

-- OUTPUT:
1.0
2.0
2.5
2.66666667
2.70833333
2.71666667
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:15:57) 
-- CODE:
from math import*
k=float(input("numero real k: "))
e= 0
c= 0
if (k==1):
	print(1.0)
else:	
	while (c < k):
		e= e+ ((1)/factorial(c))
		c= c+1
print(round(e, 8))

-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 19:16:02) 
-- CODE:
from math import*
k=float(input("numero real k: "))
e= 0
c= 0
if (k==1):
	print(1.0)
else:	
	while (c < k):
		e= e+ ((1)/factorial(c))
		c= c+1
print(round(e, 8))

-- EXECUTION TIME:
0.190716
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
